--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,52 +1,49 @@
-.container {
+:root {
+
+  --form-bg-color: linear-gradient(rgb(91, 95, 113) 33%, rgba(156,159,176,1) 100%);
+
+  --btn-color:  #3366ff;
+}
+
+.index {
+    background: var(--form-bg-color);
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
+
+}
+.index form{
+    width:40%;
+    margin: auto;
+    margin-top: 50px;
+    padding: 10px;
 }
 
-.container > div {
-  margin: 20px;
+#submit-btn:hover {
+  background-color: blue;
+  border-color: blue;
 }
-
-.menu{
-
-  list-style-type: none;
-  width: 8%;
-  background-color: #f1f1f1;
-  position: fixed;
-  height: 100%;
-  overflow: auto;
-  margin: 0;
-  padding: 0;
-  z-index: 1000;
-  left:0;
-  top: 0;
+#submit-btn{
+  font-size: 0.9em;
+  margin:2px;
+  background-color: var(--btn-color);
+  border-color: var(--btn-color);
 }
-li a
-{
-  display: block;
-  color: #000;
-  padding: 8px 10px;
-  text-decoration: none;
+#head h1{
+  text-align: center;
+  color: white;
+  
 }
+#head{
+  background-color: rgb(91, 95, 113);
+    width: 100%;
 
-li a.active
-{
-background-color: skyblue;
-color: white;
-text-decoration: none;}
+  padding: 100px;
 
-li a:hover:not(.active) {
-   background-color: #555;
-   color: white;
-   text-decoration: none;
- }
- @media screen and (max-width: 560px) {
-   .menu{
-     font-size:0.4rem;
-     width:8%;
-   }
-   li a
-   {
-     padding: 4px 8px;
-   }
- }
+}
+#bottom{
+    background-color: rgba(156,159,176,1);
+    width: 100%;
+
+height: 1000px;
+  }
